--- a/test/test_all.ipynb
+++ b/test/test_all.ipynb
@@ -644,6 +644,60 @@
     "shutil.rmtree(\"test1\")\n",
     "shutil.rmtree(\"test2\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EnCodec's 48kHz version maintains the embedding size, so compression is doubled.\n",
+    "# The model available for 48kHz audio expects stereo audio, so the input audio must have 2 channels.\n",
+    "SAMPLE_RATE = 48000\n",
+    "LENGTH_IN_SECONDS = 1\n",
+    "\n",
+    "frechet = FrechetAudioDistance(\n",
+    "    ckpt_dir=\"../checkpoints/encodec\",\n",
+    "    model_name=\"encodec\",\n",
+    "    # submodel_name=\"music_speech_audioset\", # for CLAP only\n",
+    "    sample_rate=SAMPLE_RATE,\n",
+    "    channels=2,\n",
+    "    # use_pca=True, # for VGGish only\n",
+    "    # use_activation=False, # for VGGish only\n",
+    "    verbose=True,\n",
+    "    audio_load_worker=8,\n",
+    "    # enable_fusion=False, # for CLAP only\n",
+    ")\n",
+    "\n",
+    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(traget, exist_ok=True)\n",
+    "    frequencies = np.linspace(100, 1000, count).tolist()\n",
+    "    for freq in frequencies:\n",
+    "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
+    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        # make audio stereo\n",
+    "        samples = np.stack([samples, samples], axis=1)\n",
+    "\n",
+    "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
+    "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
+    "\n",
+    "fad_score = frechet.score(\"background\", \"test1\")\n",
+    "print(\"FAD score test 1: %.8f\" % fad_score)\n",
+    "\n",
+    "fad_score = frechet.score(\"background\", \"test2\")\n",
+    "print(\"FAD score test 2: %.8f\" % fad_score)\n",
+    "\n",
+    "shutil.rmtree(\"background\")\n",
+    "shutil.rmtree(\"test1\")\n",
+    "shutil.rmtree(\"test2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
