typo in test_all notebook. clearer params description for fad.score function

--- a/test/test_all.ipynb
+++ b/test/test_all.ipynb
@@ -48,24 +48,28 @@
     "    # enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
-    "fad_score = frechet.score(\"background\", \"test1\")\n",
+    "fad_score = frechet.score(\n",
+    "    background_dir=\"background\", \n",
+    "    eval_dir=\"test1\",\n",
+    "    background_embds_path=\"../test/background/background_embds.npy\",\n",
+    "    eval_embds_path=\"../test/test1/test1_embds.npy\",)\n",
     "print(\"FAD score test 1: %.8f\" % fad_score)\n",
     "\n",
     "fad_score = frechet.score(\"background\", \"test2\")\n",
     "print(\"FAD score test 2: %.8f\" % fad_score)\n",
     "\n",
-    "shutil.rmtree(\"background\")\n",
-    "shutil.rmtree(\"test1\")\n",
-    "shutil.rmtree(\"test2\")"
+    "# shutil.rmtree(\"background\")\n",
+    "# shutil.rmtree(\"test1\")\n",
+    "# shutil.rmtree(\"test2\")"
    ]
   },
   {
@@ -89,12 +93,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -130,12 +134,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -179,12 +183,12 @@
     "    # enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -221,12 +225,12 @@
     "    # enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -263,12 +267,12 @@
     "    # enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -313,12 +317,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -356,12 +360,12 @@
     "    enable_fusion=True, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        # print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -399,12 +403,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        # print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -442,12 +446,12 @@
     "    enable_fusion=True, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        # print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -486,12 +490,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        # print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -530,12 +534,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        # print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
@@ -574,12 +578,12 @@
     "    enable_fusion=False, # for CLAP only\n",
     ")\n",
     "\n",
-    "for traget, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
-    "    os.makedirs(traget, exist_ok=True)\n",
+    "for target, count, param in [(\"background\", 10, None), (\"test1\", 5, 0.0001), (\"test2\", 5, 0.00001)]:\n",
+    "    os.makedirs(target, exist_ok=True)\n",
     "    frequencies = np.linspace(100, 1000, count).tolist()\n",
     "    for freq in frequencies:\n",
     "        samples = gen_sine_wave(freq, LENGTH_IN_SECONDS, SAMPLE_RATE, param=param)\n",
-    "        filename = os.path.join(traget, \"sin_%.0f.wav\" % freq)\n",
+    "        filename = os.path.join(target, \"sin_%.0f.wav\" % freq)\n",
     "        # print(\"Creating: %s with %i samples.\" % (filename, samples.shape[0]))\n",
     "        sf.write(filename, samples, SAMPLE_RATE, \"PCM_24\")\n",
     "\n",
